# pytgbridge

./: .gitignore  Dockerfile  README.md  config.json.example  pyproject.toml  pytgbridge  requirements.txt
.github/workflows/: lint.yml
pytgbridge/: __main__.py  bridge.py  irc.py  irc_impl.py  telegram.py  web_backend.py
src/: bridge.py  irc.py  telegram.py  web_backend.py
