[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytgbridge"
version = "0.0.0"
authors = [{ name="sfan5", email="sfan5@live.de" }]
description = "Telegram/IRC bridge"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
	"pyTelegramBotAPI>=3.7.4",
	"irc>=15.0.5",
	"json5>=0.6",
]
